src/objects/Maize_Farmer__c.object
<CustomObject>
    <fields>
        <fullName>How_useful_is_Farming_Info_from_CKWs__c</fullName>
        <description>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the CKWs?</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the CKWs?</inlineHelpText>
        <label>How useful is Farming Info from CKWs</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_useful_is_farming_info_from_SMS__c</fullName>
        <description>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from SMS subscription service/ mobile phone?</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from SMS subscription service/ mobile phone?</inlineHelpText>
        <label>How useful is farming info from SMS</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_useful_is_farming_info_from_TV__c</fullName>
        <description>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the TV?</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the TV?</inlineHelpText>
        <label>How useful is farming info from TV</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_useful_is_farming_info_from_radio__c</fullName>
        <description>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the Radios?</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the Radios?</inlineHelpText>
        <label>How useful is farming info from radio</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_useful_is_farming_info_from_traders__c</fullName>
        <description>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from Buyers/Traders?</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from Buyers/Traders?</inlineHelpText>
        <label>How useful is farming info from traders</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_you_get_quality_agro_chemicals__c</fullName>
        <description>How do you ensure that you obtain quality agro-chemicals (Fertilizers, herbicides and pesticides) that you use in maize production</description>
        <inlineHelpText>How do you ensure that you obtain quality agro-chemicals (Fertilizers, herbicides and pesticides) that you use in maize production</inlineHelpText>
        <label>How you get quality agro-chemicals</label>
        <picklist>
            <picklistValues>
                <fullName>Buy from registered input dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just buy from any input dealer (Do not mind where I Buy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collective purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seek for guidance from fellow farmers/CKW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I call the GF farmer call center for guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not use any of these inputs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Improved_Seed_Selection_Method__c</fullName>
        <description>How do you select the improved seed or variety to plant</description>
        <inlineHelpText>How do you select the improved seed or variety to plant</inlineHelpText>
        <label>Improved Seed Selection Method</label>
        <picklist>
            <picklistValues>
                <fullName>I just plant any seed available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I ask fellow farmers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consider the variety most demanded on market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intercropping_Spacing__c</fullName>
        <description>If intercropped, what spacing did you use?</description>
        <inlineHelpText>If intercropped, what spacing did you use?</inlineHelpText>
        <label>Intercropping Spacing</label>
        <picklist>
            <picklistValues>
                <fullName>2.5ft by 3ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3ft by 1ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3ft by 2ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I just plant using estimates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kilos_Harvested_Feb_June_2014__c</fullName>
        <label>Maize Kilos Harvested Feb June 2014</label>
        <picklist>
            <picklistValues>
                <fullName>less than 100Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-500Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-900Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>901-1300Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1301-1700 Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1701-2100 Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 2100 Kgs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kilos_Harvested_Sept_Dec_2013__c</fullName>
        <description>Number of Kilos of maize harvested last year in the season September - December 2013</description>
        <inlineHelpText>Number of Kilos of maize harvested last year in the season September - December 2013</inlineHelpText>
        <label>Maize Kilos Harvested Sept Dec 2013</label>
        <picklist>
            <picklistValues>
                <fullName>less than 100Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-500Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-900Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>901-1300Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1301-1700 Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1701-2100 Kgs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 2100 Kgs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kind_of_maize_seed_planted_last_season__c</fullName>
        <description>What kind of maize seed did you plant last season</description>
        <inlineHelpText>What kind of maize seed did you plant last season</inlineHelpText>
        <label>Kind of maize seed planted last season</label>
        <picklist>
            <picklistValues>
                <fullName>Own saved seed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local variety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improved seed e.g. Longe 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Land_Preparation_Methods_mainly_used__c</fullName>
        <description>What is land preparation methods does your household mainly use in preparation for maize planting</description>
        <inlineHelpText>What is land preparation methods does your household mainly use in preparation for maize planting</inlineHelpText>
        <label>Land Preparation Methods mainly used</label>
        <picklist>
            <picklistValues>
                <fullName>Use hand hoes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use conventional tractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use walking tractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use oxen or animal traction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slash and plant  (Conservation tillage)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use herbicides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clear land and use herbicides.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Likelihood_of_Implementing_Supplied_Info__c</fullName>
        <description>What is the likelihood that if we provide you with the necessary information and or training on selected  practices that you are lacking in Maize production and marketing that you will put them into practice to improve your maize yields and income</description>
        <inlineHelpText>What is the likelihood that if we provide you with the necessary information and or training on selected  practices that you are lacking in Maize production and marketing that you will put them into practice to improve your maize yields and income</inlineHelpText>
        <label>Likelihood of Implementing Supplied Info</label>
        <picklist>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maize_Information_Sources__c</fullName>
        <description>Where do you or anyone in your household generally get information about Maize farming related matters, such as good practices and market information?</description>
        <inlineHelpText>Where do you or anyone in your household generally get information about Maize farming related matters, such as good practices and market information?</inlineHelpText>
        <label>Maize Information Sources</label>
        <picklist>
            <picklistValues>
                <fullName>CKWs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grameen Foundation Farmer Call center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspapers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS subscription service/mobile phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friends, Family, Relatives, Neighbors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyers/Traders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ag Extension Agents (NAADs, NARO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farmer Group/Cooperative/association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Maize_Production_and_Marketing_Info_Need__c</fullName>
        <description>What kind of information would like to receive on Maize production and marketing</description>
        <inlineHelpText>What kind of information would like to receive on Maize production and marketing</inlineHelpText>
        <label>Maize Production and Marketing Info Need</label>
        <picklist>
            <picklistValues>
                <fullName>Soil and water conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manure or fertilizer application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compost making</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water harvesting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercropping or cover cropping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pest and diseases control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvesting and Post harvest handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulking and marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record keeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farm business planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market information (prices and buyers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weather information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farming as a business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Maize_Storage_Practices__c</fullName>
        <description>Which of the following is followed during maize storage</description>
        <inlineHelpText>Which of the following is followed during maize storage</inlineHelpText>
        <label>Maize Storage Practices</label>
        <picklist>
            <picklistValues>
                <fullName>Pack maize in clean sacks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stack maize bags on raised platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treat maize seeds with insecticide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Maize_garden_intercropped_last_season__c</fullName>
        <description>Was the maize garden last season intercropped with other crops</description>
        <inlineHelpText>Was the maize garden last season intercropped with other crops</inlineHelpText>
        <label>Maize garden intercropped last season?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maize_spacing_without_intercrop__c</fullName>
        <description>What spacing did you use for the maize (without intercrop that is as a pure stand)</description>
        <inlineHelpText>What spacing did you use for the maize (without intercrop that is as a pure stand)</inlineHelpText>
        <label>Maize spacing without intercrop</label>
        <picklist>
            <picklistValues>
                <fullName>2.5ft by 1ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5ft by 2 ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5ft by 2.5 ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I just plant using estimates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Management_Biz_Practices_last_2_years__c</fullName>
        <description>What types of management and business practices have you engaged in over the past 2 years?</description>
        <inlineHelpText>What types of management and business practices have you engaged in over the past 2 years?</inlineHelpText>
        <label>Management &amp; Biz Practices last 2 years</label>
        <picklist>
            <picklistValues>
                <fullName>Planning with the cropping calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement of farm size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal raising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption of new crops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use of improved seeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use of chemical fertilizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recording money in – money out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of the above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Management_Biz_actions_last_2_years__c</fullName>
        <description>Which of the following management and business actions have you taken in the last 2 years?</description>
        <inlineHelpText>Which of the following management and business actions have you taken in the last 2 years?</inlineHelpText>
        <label>Management &amp; Biz actions last 2 years</label>
        <picklist>
            <picklistValues>
                <fullName>Opened savings account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received a credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formed a group/ cooperative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joined a cooperative/association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grouped sale of products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grouped purchase of inputs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None of these</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Measurement_used_when_mixing_herbicide__c</fullName>
        <description>What measurement do you use when mixing herbicide for use to kill weeds</description>
        <inlineHelpText>What measurement do you use when mixing herbicide for use to kill weeds</inlineHelpText>
        <label>Measurement used when mixing herbicide</label>
        <picklist>
            <picklistValues>
                <fullName>150ml in 15/20 ltrs of water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200mls in 15/20 ltrs of water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75mls in 15/20 ltrs of water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not measure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_of_a_Maize_Farmers_Association__c</fullName>
        <description>Are you a member of a Maize farmer’s cooperative or association?</description>
        <inlineHelpText>Are you a member of a Maize farmer’s cooperative or association?</inlineHelpText>
        <label>Member of a Maize Farmers Association</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Maize_Gardens_Feb_June_2014__c</fullName>
        <label>Number of Maize Gardens Feb June 2014</label>
        <picklist>
            <picklistValues>
                <fullName>1-2 gardens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3 gardens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 gardens</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Maize_Gardens_Sept_Dec_2013__c</fullName>
        <label>Number of Maize Gardens Sept Dec 2013</label>
        <picklist>
            <picklistValues>
                <fullName>1-2 gardens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3 gardens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 gardens</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Maize_Gardens_Sept_Dec_2014__c</fullName>
        <label>Number of Maize Gardens Sept Dec 2014</label>
        <picklist>
            <picklistValues>
                <fullName>1-2 gardens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3 gardens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 garden</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Maize_Information_Media__c</fullName>
        <description>Apart from SMS and information from CKWs, what other form would you like to receive the information on maize production and marketing</description>
        <inlineHelpText>Apart from SMS and information from CKWs, what other form would you like to receive the information on maize production and marketing</inlineHelpText>
        <label>Other Maize Information Media</label>
        <picklist>
            <picklistValues>
                <fullName>Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochures/leaflets/posters in English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochures or leaflets/posters in Local languages</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percent_Maize_Produced_Feb_Aug_2014_Sold__c</fullName>
        <label>% of Maize Produced Feb Aug 2014 Sold</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 20 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 to 50 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-75 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80-90 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percent_Maize_Produced_Sep_Dec_2013_Sold__c</fullName>
        <label>% of Maize Produced Sep Dec 2013 Sold</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 20 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 to 50 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-75 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80-90 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <formula>Focus_Farmer__r.Person__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pest_disease_identify__c</fullName>
        <description>Proper pest and disease identification and control</description>
        <inlineHelpText>Proper pest and disease identification and control</inlineHelpText>
        <label>Proper pest and disease identification</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pesticide_Use_Frequency_last_12_months__c</fullName>
        <description>In the last 12 months, how many times did you use pesticides on your maize garden[s]?</description>
        <inlineHelpText>In the last 12 months, how many times did you use pesticides on your maize garden[s]?</inlineHelpText>
        <label>Pesticide Use Frequency last 12 months</label>
        <picklist>
            <picklistValues>
                <fullName>Once</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 times</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Number_for_SMS_Alerts__c</fullName>
        <description>Please provide the phone number on which you would like to receive SMS alerts on farming</description>
        <inlineHelpText>Please provide the phone number on which you would like to receive SMS alerts on farming</inlineHelpText>
        <label>Phone Number for SMS Alerts</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Frequency_of_SMS_Alerts__c</fullName>
        <description>How often would you like to receive the SMS alerts</description>
        <inlineHelpText>How often would you like to receive the SMS alerts</inlineHelpText>
        <label>Preferred Frequency of SMS Alerts</label>
        <picklist>
            <picklistValues>
                <fullName>Once a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every after 2 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Once a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Production_Marketing_Decision_location__c</fullName>
        <description>Where do you keep all your maize production and marketing decisions</description>
        <inlineHelpText>Where do you keep all your maize production and marketing decisions</inlineHelpText>
        <label>Production &amp; Marketing Decision location</label>
        <picklist>
            <picklistValues>
                <fullName>Book/chart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memory/Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On paper sheets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>